--- a/website/index.html
+++ b/website/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Maryland COVID-19 Tracker</title>
 	<meta property="og:title" content="Maryland COVID-19 Tracker" />
+	<meta property="og:description" content="This is just an example page.">
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://mdcovidtracker.com/" />
 	<meta property="og:image" content="C:\Users\Adam\Documents\GitHub\adamchzn\D3-covid-map\website\blog\_posts\2020-08-12-welcome-to-our-dashboard\dashboard.png" />
