--- a/website/index.html
+++ b/website/index.html
@@ -7,6 +7,12 @@
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://mdcovidtracker.com/" />
 	<meta property="og:image" content="C:\Users\Adam\Documents\GitHub\adamchzn\D3-covid-map\website\blog\_posts\2020-08-12-welcome-to-our-dashboard\dashboard.png" />
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:site" content="@PrayagGordy">
+	<meta name="twitter:creator" content="@adamcheezin">
+	<meta name="twitter:title" content="Parade of Fans for Houston’s Funeral">
+	<meta name="twitter:description" content="This is just an example page.">
+	<meta name="twitter:image" content="https://mdcovidtracker.com/website/blog/_posts/2020-08-12-welcome-to-our-dashboard/dashboard.png">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="css.css">
   <script src="PapaParse-5.0.2/papaparse.min.js"></script>
