--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta name="twitter:site" content="@PrayagGordy">
   <meta name="twitter:creator" content="@adamcheezin">
   <meta name="twitter:title" content="Maryland COVID-19 Tracker">
-  <meta name="twitter:description" content="This is just an example page.">
+  <meta name="twitter:description" content="Track the COVID-19 pandemic in Maryland.">
   <meta name="twitter:image" content="https://mdcovidtracker.com/website/blog/_posts/2020-08-12-welcome-to-our-dashboard/dashboard.png">
   <meta property="og:title" content="Maryland COVID-19 Tracker" />
-  <meta property="og:description" content="This is just an example page.">
+  <meta property="og:description" content="Track the COVID-19 pandemic in Maryland.">
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://mdcovidtracker.com/" />
   <meta property="og:image" content="https://mdcovidtracker.com/website/blog/_posts/2020-08-12-welcome-to-our-dashboard/dashboard.png" />
