--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <meta name="twitter:creator" content="@adamcheezin">
   <meta name="twitter:title" content="Maryland COVID-19 Tracker">
   <meta name="twitter:description" content="Track the COVID-19 pandemic in Maryland.">
-  <meta name="twitter:image" content="https://mdcovidtracker.com/website/blog/_posts/2020-08-12-welcome-to-our-dashboard/dashboard.png">
+  <meta name="twitter:image" content="C:\Users\Adam\Documents\GitHub\adamchzn\D3-covid-map\website\blog\_posts\2020-08-12-welcome-to-our-dashboard\dashboard.png">
   <meta property="og:title" content="Maryland COVID-19 Tracker" />
   <meta property="og:description" content="Track the COVID-19 pandemic in Maryland.">
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://mdcovidtracker.com/" />
-  <meta property="og:image" content="https://mdcovidtracker.com/website/blog/_posts/2020-08-12-welcome-to-our-dashboard/dashboard.png" />
+  <meta property="og:image" content="C:\Users\Adam\Documents\GitHub\adamchzn\D3-covid-map\website\blog\_posts\2020-08-12-welcome-to-our-dashboard\dashboard.png" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 	<link rel="stylesheet" href="css.css">
   <script src="website/PapaParse-5.0.2/papaparse.min.js"></script>
