--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://mdcovidtracker.com/" />
   <meta property="og:image" content="https://mdcovidtracker.com/website/blog/docs/posts/2020-08-12-welcome-to-our-dashboard/dashboard.png" />
-  <link rel="icon" href="website/Icon Final.svg">
+  <link rel="icon" href="https://mdcovidtracker.com/website/Icon Final.svg">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="css.css">
   <script src="website/PapaParse-5.0.2/papaparse.min.js"></script>
