--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-167555707-2"></script>
-  <script> 
+  <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
@@ -258,7 +258,7 @@
 			<footer class="col-12 footer">
 				<p>
 					Designed by Adam Chazan and Prayag Gordy<br>
-					<a href="mailto:adam.e.chazan@gmail.com">adam.e.chazan@gmail.com</a>, <a href="mailto:prayaggordy@gmail.com">prayaggordy@gmail.com</a>
+					Feedback, comments, questions? Email <a href="mailto:adam.e.chazan@gmail.com">adam.e.chazan@gmail.com</a> and <a href="mailto:prayaggordy@gmail.com">prayaggordy@gmail.com</a>.
 				</p>
 			</footer>
 		</div>
