--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html prefix="og: https://ogp.me/ns#"></html>
 <head>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
   <title>MD COVID-19 Tracker</title>
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Maryland COVID-19 Tracker">
@@ -11,7 +15,6 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://mdcovidtracker.com/" />
   <meta property="og:image" content="https://mdcovidtracker.com/website/blog/docs/posts/2020-08-12-welcome-to-our-dashboard/dashboard.png" />
-  <link rel="icon" href="website/Icon Final.svg" sizes="any" type="image/svg+xml">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="css.css">
   <script src="website/PapaParse-5.0.2/papaparse.min.js"></script>
