--- a/index.html
+++ b/index.html
@@ -200,11 +200,11 @@
 					<div class="col-12 order-2 order-md-1 mapContainer">
 						<div class="toggleMap toggleMapVisible mapTitle" id="countyNewCasesTitle">Change in confirmed cases over the last two weeks (by county)</div>
 						<div class="toggleMap toggleMapVisible map" id="countyNewCases"></div>
-						<div class="toggleMap mapTitle" id="countyTotalCasesTitle">Total confirmed cases by county</div>
+						<div class="toggleMap mapTitle" id="countyTotalCasesTitle">Total confirmed cases per 100,000 by county</div>
 						<div class="toggleMap map" id="countyTotalCases"></div>
 						<div class="toggleMap mapTitle" id="zipNewCasesTitle">Change in confirmed cases over the last two weeks (by zip code)</div>
 						<div class="toggleMap map" id="zipNewCases"></div>
-						<div class="toggleMap mapTitle" id="zipTotalCasesTitle">Total confirmed cases by zip code</div>
+						<div class="toggleMap mapTitle" id="zipTotalCasesTitle">Total confirmed cases per 100,000 by zip code</div>
 						<div class="toggleMap map" id="zipTotalCases"></div>
 						<div class="toggleMap mapTitle" id="countyTestingTitle">Total tests per 100,000 by county</div>
 						<div class="toggleMap map" id="countyTesting"></div>
