--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@
 						<div class="instructions"><p>Click to snap to county or zip code. Click outside map to reset.</p></div>
 						<div class="btn-group flex-wrap" role="group">
 							<button id="countyNewCasesButton" type="button" class="btn btn-outline-secondary btn-sm engaged" onclick="toggleMap('countyNewCases')"> Change in cases by county</button>
-							<button id="countyTotalCasesButton" type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleMap('countyTotalCases')"> Total cases by county</button>
+							<button id="countyTotalCasesButton" type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleMap('countyTotalCases')"> Cases per 100,000 by county</button>
 							<button id="zipNewCasesButton" type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleMap('zipNewCases')"> Change in cases by zip</button>
-							<button id="zipTotalCasesButton" type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleMap('zipTotalCases')"> Total cases by zip</button>
+							<button id="zipTotalCasesButton" type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleMap('zipTotalCases')"> Cases per 100,000 by zip</button>
 							<button id="countyTestingButton" type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleMap('countyTesting')"> Tests per 100,000 by county</button>
 						</div>
 		</div>
