Revert "added last updated"
This reverts commit e400246129945407ecca0a23058dfb344e6f720e.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
           $("#new_tests").text(results[2][3]);
           $("#new_posit").text(results[2][4]);
           $("#new_negat").text(results[2][5]);
-          $("#last_update").text(results[1][6]);
         }
       });
     }
@@ -261,8 +260,8 @@
 		<div class="row">
 			<footer class="col-12 footer">
 				<p>
-          Last updated <span id="last_update"></span><br>
-					Designed by Adam Chazan and Prayag Gordy. Feedback, comments, questions? Email <a href="mailto:adam.e.chazan@gmail.com">adam.e.chazan@gmail.com</a> and <a href="mailto:prayaggordy@gmail.com">prayaggordy@gmail.com</a>.
+					Designed by Adam Chazan and Prayag Gordy<br>
+					Feedback, comments, questions? Email <a href="mailto:adam.e.chazan@gmail.com">adam.e.chazan@gmail.com</a> and <a href="mailto:prayaggordy@gmail.com">prayaggordy@gmail.com</a>.
 				</p>
 			</footer>
 		</div>
