--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@
         const inspect = Inspector.into("#countyNewCases");
     	(new Runtime).module(define, name => name === "chart" ? inspect() : undefined);
 	</script>
+  <script type="module">
+		// county current hospitalizations map
+		import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@4/dist/runtime.js";
+		import define from "https://api.observablehq.com/@adamchzn/md-counties-hospital-capacity@918.js?v=3";
+		const inspect = Inspector.into("#countyCurrHospit");
+		(new Runtime).module(define, name => name === "chart" ? inspect() : undefined);
+	</script>
 	<script type="module">
 		// county total cases map
 		import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@4/dist/runtime.js";
@@ -201,7 +208,9 @@
 					<div class="col-12 order-2 order-md-1 mapContainer">
 						<div class="toggleMap toggleMapVisible mapTitle" id="countyNewCasesTitle">Change in confirmed cases over the last two weeks (by county)</div>
 						<div class="toggleMap toggleMapVisible map" id="countyNewCases"></div>
-						<div class="toggleMap mapTitle" id="countyTotalCasesTitle">Total confirmed cases per 100,000 by county</div>
+            <div class="toggleMap mapTitle" id="countyCurrHospitTitle">Percent of hospital beds in use (by county)</div>
+            <div class="toggleMap map" id="countyCurrHospit"></div>
+            <div class="toggleMap mapTitle" id="countyTotalCasesTitle">Total confirmed cases per 100,000 by county</div>
 						<div class="toggleMap map" id="countyTotalCases"></div>
 						<div class="toggleMap mapTitle" id="zipNewCasesTitle">Change in confirmed cases over the last two weeks (by zip code)</div>
 						<div class="toggleMap map" id="zipNewCases"></div>
@@ -212,6 +221,7 @@
 						<div class="instructions"><p>Click to snap to county or zip code. Click outside map to reset.</p></div>
 						<div class="btn-group flex-wrap" role="group">
 							<button id="countyNewCasesButton" type="button" class="btn btn-outline-secondary btn-sm engaged" onclick="toggleMap('countyNewCases')"> Change in cases by county</button>
+              <button id="countyCurrHospitButton" type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleMap('countyCurrHospit')"> Current hospitalizations by county</button>
 							<button id="countyTotalCasesButton" type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleMap('countyTotalCases')"> Cases per 100,000 by county</button>
 							<button id="zipNewCasesButton" type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleMap('zipNewCases')"> Change in cases by zip</button>
 							<button id="zipTotalCasesButton" type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleMap('zipTotalCases')"> Cases per 100,000 by zip</button>
