replaced negative with vaccinated

--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
           $("#total_hospi").text(results[1][2]);
           $("#total_tests").text(results[1][3]);
           $("#total_posit").text(results[1][4]);
-          $("#total_negat").text(results[1][5]);
+          $("#total_vacci").text(results[1][5]);
           $("#new_cases").text(results[2][0]);
           $("#new_death").text(results[2][1]);
           $("#new_hospi").text(results[2][2]);
           $("#new_tests").text(results[2][3]);
           $("#new_posit").text(results[2][4]);
-          $("#new_negat").text(results[2][5]);
+          $("#new_vacci").text(results[2][5]);
           $("#last_update").text(results[1][6]);
           $("#hospit_dates").text(results[1][7])
         }
@@ -200,9 +200,9 @@
 								<div class="changeToday">Daily change: <span id="new_posit" style="font-weight: 700;"></span></div>
 							</div>
 							<div class="col-xl-2 col-md-4 col-6 card">
-								<div class="subhead">Negative Tests</div>
-								<div class="cardNum" id="total_negat"></div>
-								<div class="changeToday">Daily change: <span id="new_negat" style="font-weight: 700;"></span></div>
+								<div class="subhead">Marylanders vaccinated</div>
+								<div class="cardNum" id="total_vacci"></div>
+								<div class="changeToday">Daily change: <span id="new_vacci" style="font-weight: 700;"></span></div>
 							</div>
 						</div>
 					</div>
